style: fixing sonarqube minor code smells [DHIS2-12255]